--- a/index.html
+++ b/index.html
@@ -321,17 +321,17 @@
 							</span>
 							<span class="containers">
 								<h5 class="style_font">COMMUNICATION</h5>
-								<span id="COMMUNICATION">&nbsp;</span>
+								<span id="angular">&nbsp;</span>
 							</span>
 							</span>
 						</li>
 						<li><span class="containers">
 							<h5 class="style_font">SASS & LESS</h5>
-								<span id="SASS">&nbsp;</span>
+								<span id="html_css">&nbsp;</span>
 							</span>
 							<span class="containers">
 								<h5 class="style_font">TEAM WORK</h5>
-								<span id="SASS">&nbsp;</span>
+								<span id="html_css">&nbsp;</span>
 							</span>
 							</span>
 						</li>
