--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<span id="avaible" class="style_font"> ON VACATION</span>
 					<div id="main_inner_home">
 						<div id="image_home">
-							<img src="Imagenes/weon.jpg" class="shadow" height="397px" width="317px">
+							<img src="Imagenes/profile.jpg" class="shadow" height="397px" width="317px">
 						</div>
 						<div id="info_home">
 							<div id="inner_info">
