--- a/index.html
+++ b/index.html
@@ -3,85 +3,74 @@
 <html lang="en">
 <head>
 	<link rel="StyleSheet" href= "CSS/app.css?v=0.0.2" />
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
      <title>Lucero - Creative Resume/CV Theme</title>
      <meta charset="UTF-8">
 </head>
-<body>
-	<!--Sidebar  BEGIN -->
-	<div id="sidebar">
-		<div id="sidebar_inner">
-			<img src="Imagenes/Logo.png">
-			<div id="menu_container">
-				<ul>
-					<li><a href=" " class="style_font"><strong>Home</strong></a></li>
-					<li><a href=" " class="style_font"><strong>About Me</strong></a></li>
-					<li><a href=" " class="style_font"><strong>Resume</strong></a></li>
-					<li><a href=" " class="style_font"><strong>Skills</strong></a></li>
-					<li><a href=" " class="style_font"><strong>Portfolio</strong></a></li>
-					<li><a href=" " class="style_font"><strong>Testimonials</strong></a></li>
-					<li><a href=" " class="style_font"><strong>Contact</strong></a>	</li>
-				</ul>
-			</div>
-			<div id="copyright">				
-				 <p class="style_font">© Osmar Lucero.<br>
-				All rights reserved 2020</p>
-			</div>
-		</div>
-	</div>
 
-	<!--Sidebar  END-->
-	<!--Content-->
+<body>
+	
+	<div class="row">
+	<div class="col-sm-12 col-lg-12">
 	<div id="content">
 		<!--HOME CONTENT START-->
-		<div id="home">
-			<div id="inner_home" >
-				<div id="info_about" class="shadow">
-					<span id="avaible" class="style_font"> ON VACATION</span>
-					<div id="main_inner_home">
-						<div id="image_home">
-							<img src="Imagenes/profile.jpg" class="shadow" height="397px" width="317px">
-						</div>
-						<div id="info_home">
-							<div id="inner_info">
-								<h1 class="style_font"><strong>I'M OSMAR LUCERO</strong></h1>
-								<p class="style_font font_info">AN INDEPENDENT FRONT-END WEB DEVELOPER AND GRAPHIC DESIGNER FROM LA PAZ, MEXICO.</p>
-								<div id="list_bio">
-									<ul>
-										<li class="style_font"><span >Full Name:</span> Osmar Lucero</li>
-										<li class="style_font"><span>Age:</span> 19</li>
-										<li class="style_font"><span>Nationality</span> Mexican</li>
-										<li class="style_font"><span>Adress:</span> Calle123 colonia 1234</li>
-										<li class="style_font"><span>Email:</span> Email@gmail.com</li>
-										<li class="style_font"><span>Phone:</span> 6125554780</li>
-										<li class="style_font"><span>My Interests:</span> Programming</li>
-										<li class="style_font"><span>Quote:</span> The World is Yours</li>
-									</ul>
-									<span id="button_container">
-										<a href="#home" class="button_design shadow style_font">FULL BIO HERE</a>
-									</span>
+		<div class="row">
+			<div id="home">
+				<div id="inner_home" >
+					<div id="info_about" class="shadow">
+						<div class="row mb-3 pb-4">
+							<div class="col-sm-12 col-lg-6 mb-4"style="background-color: pud rple;">
+									<div class="m-4">
+										<img src="Imagenes/profile.jpg" alt="" class="img-fluid shadow">
+									</div>
+								</div>
+							
+								<div class="col-sm-11 col-lg-6 mt-3" style="background-color: rded;">
+									<div id="info_home">
+										<div id="inner_info">
+											<h1 class="style_font"><strong>I'M OSMAR LUCERO</strong></h1>
+											<p class="style_font font_info">AN INDEPENDENT FRONT-END WEB DEVELOPER AND GRAPHIC DESIGNER FROM LA PAZ, MEXICO.</p>
+											<div id="list_bio">
+												<ul>
+													<li class="style_font"><span>Full Name:</span> Osmar Lucero</li>
+													<li class="style_font"><span>Age:</span> 20</li>
+													<li class="style_font"><span>Nationality</span> Mexican</li>
+													<li class="style_font"><span>Adress:</span> Calle123 colonia 1234</li>
+													<li class="style_font"><span>Email:</span> Email@gmail.com</li>
+													<li class="style_font"><span>Phone:</span> 6125554780</li>
+													<li class="style_font"><span>My Interests:</span> Programming</li>
+													<li class="style_font"><span>Quote:</span> The World is Yours</li>
+												</ul>
+												<span id="button_container">
+													<a href="#home" class="button_design shadow style_font">FULL BIO HERE</a>
+												</span>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div id="footer_bio">
-						<ul>
-							<li><a href=""><img src="Imagenes/facebook.png"></a></li>
-							<li><a href=""><img src="Imagenes/twitter.png"></a></li>
-							<li><a href=""><img src="Imagenes/be.png"></a></li>
-							<li><a href=""><img src="Imagenes/google-mas.png"></a></li>
-							<li><a href=""><img src="Imagenes/instagram.png"></a></li>
-							<li><a href=""><img src="Imagenes/linkedin.png"></a></li>
-						</ul>
+						<div id="footer_bio">
+							<ul>
+								<li><a href=""><img src="Imagenes/facebook.png"></a></li>
+								<li><a href=""><img src="Imagenes/twitter.png"></a></li>
+								<li><a href=""><img src="Imagenes/be.png"></a></li>
+								<li><a href=""><img src="Imagenes/google-mas.png"></a></li>
+								<li><a href=""><img src="Imagenes/instagram.png"></a></li>
+								<li><a href=""><img src="Imagenes/linkedin.png"></a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
+			</div>
 			</div>
 		</div>
 		<!--HOME CONTENT END//////////////////////////
 			///////////////////////////////
 			///////////////////////////////
 		-->
-		<!--ABOUT CONTENT START-->
-	<div id="about_me">
+			<!--ABOUT CONTENT START-->
+	<div id="about_me" class="col-sm-12 col-lg-12 mt-5">
 		<div id="about_me_inner">
 			<div class="title_master">
 				<h1 class="style_font">ABOUT ME</h1>
@@ -132,8 +121,8 @@
 			///////////////////////////////
 			///////////////////////////////
 		-->
-				<!--EXPERIENCE CONTENT START-->
-				<div id="experience">
+		<!--EXPERIENCE CONTENT START-->
+				<div id="experience" class="col-sm-12 col-lg-12 mt-5">
 					<div id="experience_inner">
 						<div id="experience_inner_title">
 							<h1 id="title_exp"class="style_font">7 YEARS EXPERIENCE</h1>
@@ -235,8 +224,8 @@
 			///////////////////////////////
 			///////////////////////////////
 		-->
-						<!--EDUCATIONAL CONTENT START-->
-						<div id="educational">
+		<!--EDUCATIONAL CONTENT START-->
+						<div id="educational" class="col-lg-12 col-sm-12">
 							<div id="educational_main">
 								<div class="title_master">
 									<h1 class="style_font" style="margin-left: 9%;">EDUCATIONAL VALUE</h1>
@@ -283,8 +272,8 @@
 			///////////////////////////////
 			///////////////////////////////
 		-->
-								<!--SKILLS CONTENT START-->
-	<div id="skills">
+				<!--SKILLS CONTENT START-->
+	<div id="skills"  class="col-lg-12 col-sm-12">
 		<div id="skills_main">
 			<div class="title_master">
 				<h1 class="style_font" style="margin-left: 28%;">SKILLS</h1>
@@ -344,7 +333,7 @@
 						///////////////////////////////
 						///////////////////////////////
 					-->
-	<!--EXPERTISE CONTENT START-->
+					<!--EXPERTISE CONTENT START-->
 	<div id ="expertise">
 		<div id="expertise_main">
 			<div class="title_master">
@@ -660,7 +649,6 @@
 			</div>
 		</div>
 		<!--BANNER CONTENT END//////////////////////////-->
-	</div>
-	<!--Content  END-->
+	</div>	
 </body>
 </html>
