--- a/index.html
+++ b/index.html
@@ -333,69 +333,16 @@
 						///////////////////////////////
 						///////////////////////////////
 					-->
-					<!--EXPERTISE CONTENT START-->
-	<div id ="expertise">
-		<div id="expertise_main">
-			<div class="title_master">
-				<h1 class="style_font" style="margin-left: 17%;">EXPERTISE</h1>
-				<p class="style_font style_sub">YOU MUST WRITE TO THE PEOPLE'S EXPERTISE.</p>
-				<span class="bar" style="margin-left: 32%;"></span>
-			</div>
-			<div id="expertise_image_main">
-				<div id="expertise_list" style="
-    margin-left: 9%;
-">
-					<ul class="three">
-						<li><img src="Imagenes/html.png" width="100%">
-							<p class="style_font">HTML</p>
-						</li>
-						<li><img src="Imagenes/html.png" width="100%">
-							<p class="style_font">HTML</p>
-						</li>
-						<li><img src="Imagenes/html.png" width="100%">
-							<p class="style_font">HTML</p>
-						</li>
-					</ul>
-					<ul class="three">
-						<li><img src="Imagenes/html.png" width="100%">
-							<p class="style_font">HTML</p>
-						</li>
-						<li><img src="Imagenes/html.png" width="100%">
-							<p class="style_font">HTML</p>
-						</li>
-						<li><img src="Imagenes/html.png" width="100%">
-							<p class="style_font">HTML</p>
-						</li>
-					</ul>
-					<ul class="three">
-						<li><img src="Imagenes/html.png" width="100%">
-							<p class="style_font">HTML</p>
-						</li>
-						<li><img src="Imagenes/html.png" width="100%">
-							<p class="style_font">HTML</p>
-						</li>
-						<li><img src="Imagenes/html.png" width="100%">
-							<p class="style_font">HTML</p>
-						</li>
-					</ul>
-				</div>			
-			</div>
-		</div>
-		
-	</div>
-	<!--EXPERTISE CONTENT END//////////////////////////
-						///////////////////////////////
-						///////////////////////////////
-					-->
+				
 	<!--WORK CONTENT START-->
-	<div id="work">
+	<div id="work" class="col-lg-12 col-sm-12 ml-5">
 		<div id="work_main">
 			<div class="title_master">
 				<h1 class="style_font" style="margin-left: 10%;">WORK PROCESS</h1>
 				<p class="style_font style_sub">YOU MUST WRITE TO THE PEOPLE'S EXPERTISE.</p>
 				<span class="bar" style="margin-left: 32%;"></span>
 			</div>
-			<div id="work_sub">
+			<div id="work_sub" class="ml-5">
 				<div id="work_sub_inner" style="margin-top: 10%;">
 					<ul id="list_work">
 						<li>
@@ -428,14 +375,14 @@
 						///////////////////////////////
 					-->
 		<!--PORTFOLIO CONTENT START-->
-		<div id="portfolio">
-			<div id="portfolio_main">
-				<div class="title_master">
+		<div id="portfolio" class="col-lg-12 col-sm-12 ml-5">
+			<div id="portfolio_main"class="ml-5">
+				<div class="title_master"class="ml-5">
 					<h1 class="style_font" style="margin-left: 21%;">PORTFOLIO</h1>
 					<p class="style_font style_sub">I'M LOOKING TO EXPAND MY PORTFOLIO WHILE I'M YOUNG.</p>
 					<span class="bar" style="margin-left: 32%;"></span>
 				</div>
-				<div id="inner_portfolio">
+				<div id="inner_portfolio" >
 					<ul>
 						<li>
 							<span id="vanisher">
@@ -531,7 +478,7 @@
 						///////////////////////////////
 					-->
 		<!--CUPS CONTENT START-->
-		<div id="cups">
+		<div id="cups" class="col-lg-12 col-sm-12 ml-5">
 			<div id="cups_main">
 				<ul>
 					<li>
@@ -558,7 +505,7 @@
 						///////////////////////////////
 					-->
 					<!--TESTIMONIAL CONTENT START-->
-		<div id="testimonial">
+		<div id="testimonial"  class="col-lg-12 col-sm-12 ml-5">
 			<div id="testimonial_main">
 				<div class="title_master">
 					<h1 class="style_font" style="margin-left: 21%;">TESTIMONIALS</h1>
@@ -584,14 +531,14 @@
 						///////////////////////////////
 					-->
 					<!--CONTACT CONTENT START-->
-		<div id="contact">
+		<div id="contact"  class="col-lg-12 col-sm-12 ml-5">
 			<div id="contact_main">
 				<div class="title_master">
 					<h1 class="style_font" style="margin-left: 21%;">CONTACT ME</h1>
 					<p class="style_font style_sub">ARE YOU INTERESTED IN WORKING TOGETHER?</p>
 					<span class="bar" style="margin-left: 32%;"></span>
 				</div>
-				<div id="contact_inner">
+				<div id="contact_inner"  class="col-lg-12 col-sm-12 ml-5">
 					<ul id="list_one">
 						<li>
 							<h3 class="style_font">CONTACT INFO:</h3>
@@ -633,7 +580,7 @@
 			</div>
 		</div>
 		<!--BANNER CONTENT START-->
-		<div id="banner">
+		<div id="banner"  class="col-lg-12 col-sm-12 ml-5">
 			<div id="banner_main">
 				<div id="footer_main">
 						<ul>
